<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <!-- START Guideline -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />
    <!-- END Guideline -->

    <EditText
        android:background="@drawable/rounded_edittext"
        android:textColor="?attr/colorOnBackground"
        android:textColorHint="@color/hintColor"
        android:paddingVertical="12dp"
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:textSize="17sp"
        android:paddingHorizontal="16dp"
        android:maxWidth="500dp"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end" />

    <EditText
        android:background="@drawable/rounded_edittext"
        android:textColor="?attr/colorOnBackground"
        android:textColorHint="@color/hintColor"
        android:paddingVertical="12dp"
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textSize="17sp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:maxWidth="500dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end" />

    <Button
        android:elevation="10dp"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/register_button"
        android:textSize="18sp"
        android:layout_marginTop="28dp"
        android:maxWidth="500dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end" />

    <TextView
        android:id="@+id/toLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_login"
        android:fontFamily="sans-serif-medium"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="15sp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end" />

</androidx.constraintlayout.widget.ConstraintLayout>
