<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp">

    <!-- View'i üste alıyoruz -->
    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#66000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Ardından ImageView -->


    <!-- START Guideline -->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieLoginAnim"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:elevation="5dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toRegister"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/login_robot"
        app:lottie_speed="0.5" />

    <ImageView
        android:id="@+id/loginBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/bg_desc"
        android:scaleType="fitXY"
        android:src="@drawable/login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />
    <!-- END Guideline -->


    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="0dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxWidth="488dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="?attr/colorOnBackground"
        android:textColorHint="?attr/colorControlNormal"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxWidth="500dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="?attr/colorOnBackground"
        android:textColorHint="?attr/colorControlNormal"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/email" />



    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_button"
        android:elevation="10dp"
        android:letterSpacing="0.05"
        android:maxWidth="1000dp"
        android:text="@string/login_button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <TextView
        android:id="@+id/toRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif-medium"
        android:text="@string/go_to_register"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
